--- a/package.json
+++ b/package.json
@@ -1,19 +1,2 @@
-{
-  "name": "arena-futebolbr-backend",
-  "version": "1.0.0",
-  "description": "Backend para o site ArenaFutebolBR com rota /jogos-hoje",
-  "main": "index.js",
-  "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js"
-  },
-  "author": "ArenaFutebolBR",
-  "license": "MIT",
-  "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^4.18.2"
-  },
-  "devDependencies": {
-    "nodemon": "^3.0.3"
-  }
-}
+// Conteúdo do arquivo package.json
+// Código do site ArenaFutebolBR
